--- a/pages/personal-cabinet.html
+++ b/pages/personal-cabinet.html
@@ -279,7 +279,7 @@
                 
                 <div class="form-group">
                     <label class="form-label">Описание (необязательно)</label>
-                    <textarea class="form-textarea" id="meetingDescription" placeholder="О чем будет встреча..."></textarea>
+                    <textarea class="form-textarea" id="meetingDescription" placeholder="О чем будет встреча.."></textarea>
                 </div>
                 
                 <button type="submit" class="modal-btn">Запланировать встречу</button>
